# OneMotorGUI

./: CMakeLists.txt
cmake/: FindGTKMM.cmake  FindLibnl3.cmake
include/models/: motor_info.hpp
include/widgets/: can_connection_panel.hpp  motor_control_panel.hpp  motor_tree_view.hpp
include/windows/: mainwindow.hpp
src/: main.cpp
src/models/: motor_info.cpp
src/widgets/: can_connection_panel.cpp  motor_control_panel.cpp  motor_tree_view.cpp
src/windows/: mainwindow.cpp
